Some polishing here before major update to release

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <div class="header-inner">
             <button id="nav-toggle"><span></span></button>
-            <div class="navigation">
+            <div class="dropdown">
                 <nav class="header-nav">
                     <ul>
                         <li class="current-menu-item page_item"><a href="#">Главная</a></li>
@@ -22,7 +22,19 @@
                 </nav>
             </div>
             <div class="logo"><img src="./assets/images/logo.svg" alt=""></div>
-            <div class="actions"></div>
+            <div class="actions">
+                <div class="action action-location">
+                    <div class="icon">
+                        <svg width="16" height="19" viewBox="0 0 16 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M0.254771 1.72392C0.155544 0.532487 1.49043 -0.12625 2.40674 0.485876L2.70315 0.683886C7.22275 3.70313 11.4526 7.11045 15.3414 10.8647C16.3101 11.7999 15.4559 13.2759 14.2471 13.1464L8.98069 12.5824C8.4445 12.525 7.95039 12.8132 7.74689 13.2623L5.61827 17.9593C5.10418 19.0937 3.41079 18.9882 3.07385 17.7643C1.65908 12.6252 0.725246 7.37299 0.283711 2.07142L0.254771 1.72392ZM1.77176 1.86561L1.77854 1.94692C2.20132 7.02331 3.08352 12.0539 4.41491 16.9807L6.38065 12.6431C6.86109 11.583 7.9845 10.9672 9.14042 11.091L13.9474 11.6058C10.2205 8.0473 6.17944 4.81008 1.86992 1.93117L1.77176 1.86561Z" fill="white"/>
+                        </svg>                    
+                    </div>
+                    <div class="content">
+                        <p class="bold">Brasov</p>
+                        <p>Calea Bucuresti 107</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
     <main class="main">
@@ -44,15 +56,15 @@
             <div class="menu-head-inner">
                 <div class="menu-search">
                     <button class="menu-search-toggle">
-                        <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" clip-rule="evenodd" d="M12.5902 6.29508C12.5902 7.69412 12.1338 8.98656 11.3618 10.0316L15.6159 14.2858C16.128 14.7979 16.128 15.6283 15.6159 16.1405C15.1037 16.6526 14.2733 16.6526 13.7612 16.1405L9.39562 11.7749C8.4804 12.2939 7.42234 12.5902 6.29508 12.5902C2.8184 12.5902 0 9.77176 0 6.29508C0 2.8184 2.8184 0 6.29508 0C9.77176 0 12.5902 2.8184 12.5902 6.29508ZM6.29508 10.4918C8.61287 10.4918 10.4918 8.61287 10.4918 6.29508C10.4918 3.9773 8.61287 2.09836 6.29508 2.09836C3.9773 2.09836 2.09836 3.9773 2.09836 6.29508C2.09836 8.61287 3.9773 10.4918 6.29508 10.4918Z" fill="white"/>
-                        </svg>                                
+                        <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M11.3851 12.4457C8.73479 14.5684 4.85535 14.4013 2.39857 11.9445C-0.23747 9.3085 -0.23747 5.03464 2.39857 2.3986C5.03461 -0.23744 9.30847 -0.23744 11.9445 2.3986C14.4013 4.85538 14.5684 8.73481 12.4457 11.3851L17.6013 16.5407C17.8942 16.8336 17.8942 17.3085 17.6013 17.6014C17.3085 17.8943 16.8336 17.8943 16.5407 17.6014L11.3851 12.4457ZM3.45923 10.8839C1.40898 8.83363 1.40898 5.50951 3.45923 3.45926C5.50948 1.40901 8.8336 1.40901 10.8839 3.45926C12.9326 5.50801 12.9341 8.82875 10.8884 10.8794C10.8868 10.8809 10.8853 10.8823 10.8838 10.8839C10.8823 10.8854 10.8808 10.8869 10.8793 10.8884C8.82873 12.9341 5.50798 12.9326 3.45923 10.8839Z" fill="white"/>
+                        </svg>                            
                     </button>
-                    <input type="text" class="menu-search-input" id="menu-search" placeholder="Найти...">
+                    <input type="text" class="menu-search-input" id="menu-search-input" placeholder="Найти...">
                     <button class="menu-search-clear">
                         <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1.55577 0.932364C1.19987 0.57646 0.622833 0.57646 0.266929 0.932364C-0.0889762 1.28827 -0.0889762 1.8653 0.266929 2.22121L6.71116 8.66544L0.266929 15.1097C-0.0889762 15.4656 -0.0889762 16.0426 0.266929 16.3985C0.622833 16.7544 1.19987 16.7544 1.55577 16.3985L8 9.95428L14.4442 16.3985C14.8001 16.7544 15.3772 16.7544 15.7331 16.3985C16.089 16.0426 16.089 15.4656 15.7331 15.1097L9.28885 8.66544L15.7331 2.22122C16.089 1.86531 16.089 1.28828 15.7331 0.932371C15.3772 0.576466 14.8001 0.576466 14.4442 0.932371L8 7.37659L1.55577 0.932364Z" fill="white"/>
-                        </svg>                                
+                        </svg>                                            
                     </button>
                 </div>
                 <div class="menu-categories-wrapper">
@@ -80,7 +92,7 @@
                             <img src="./assets/images/top_photo.jpg" alt="" class="photo">
                         </div>
                         <div class="dish-content">
-                            <div class="dish-name">Double California Creveti + Mango</div>
+                            <div class="dish-name">Creveti + Mango</div>
                             <div class="dish-price-row">
                                 <div class="dish-weight">249 гр</div>
                                 <button class="add-to-cart-button">45 <span class="currency">Lei</span></button>
